# fanuc-minimal-example

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  deps.sh  docker-compose.yml  env.sh  main.c  setup.sh  x64.Dockerfile
src/: CMakeLists.txt  main.c
